--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "dns": "^0.2.2",
     "iview": "^3.2.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
